# cleo

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_and_test.sh  rpi_build_and_test.sh
source/: CMakeLists.txt  LICENSE
source/bindump/: CMakeLists.txt  main.cpp  other.cpp
source/core/: CMakeLists.txt
source/core/cleo/: array.cpp  array.hpp  array_map.cpp  array_map.hpp  array_set.cpp  array_set.hpp  atom.cpp  atom.hpp  byte_array.cpp  byte_array.hpp  bytecode_fn.cpp  bytecode_fn.hpp  cleo.compiler.cleo  cleo.core.cleo  cleo.profiler.cleo  cleo.vm.cleo  clib.cpp  clib.hpp  compile.cpp  compile.hpp  cons.cpp  cons.hpp  dummy.cpp  equality.cpp  equality.hpp  error.cpp  error.hpp  eval.cpp  eval.hpp  fn.cpp  fn.hpp  fn_call.cpp  fn_call.hpp  global.cpp  global.hpp  hash.cpp  hash.hpp  lazy_seq.cpp  lazy_seq.hpp  list.cpp  (+38 more)
source/extlib/: CMakeLists.txt  libmain.cpp
source/repl/: CMakeLists.txt  main.cpp
source/run/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  array_map_test.cpp  array_set_test.cpp  array_test.cpp  byte_array_test.cpp  bytecode_fn_test.cpp  cleo.core.test.cleo  clib_test.cpp  compile_test.cpp  dummy_test.cpp  equality_test.cpp  eval_test.cpp  fn_test.cpp  hash_test.cpp  lazy_seq_test.cpp  list_test.cpp  macro_test.cpp  main.cpp  math_test.cpp  memory_test.cpp  multimethod_test.cpp  namespace_test.cpp  persistent_hash_map_test.cpp  persistent_hash_set_test.cpp  print_test.cpp  reader_test.cpp  sha_test.cpp  small_map_test.cpp  small_set_test.cpp  small_vector_test.cpp  string_seq_test.cpp  test_listener.hpp  util.hpp  value_test.cpp  var_test.cpp  vm_test.cpp
