include_directories(${GoogleMock_INCLUDE_DIRS})
include_directories("../source/core")

add_executable(cleo_test
  array_test.cpp
  array_map_test.cpp
  array_set_test.cpp
  byte_array_test.cpp
  bytecode_fn_test.cpp
  clib_test.cpp
  compile_test.cpp
  equality_test.cpp
  eval_test.cpp
  fn_test.cpp
  hash_test.cpp
  lazy_seq_test.cpp
  list_test.cpp
  macro_test.cpp
  math_test.cpp
  memory_test.cpp
  multimethod_test.cpp
  namespace_test.cpp
  persistent_hash_map_test.cpp
  persistent_hash_set_test.cpp
  print_test.cpp
  reader_test.cpp
  sha_test.cpp
  string_seq_test.cpp
  value_test.cpp
  var_test.cpp
  vm_test.cpp
  main.cpp
)
target_link_libraries(cleo_test cleo_core gmock pthread)
